tests/ui/issues/issue-48838.rs
enum Functions {
    Square = |x| x, //~ ERROR mismatched types
}

fn main() {}
